Tweaks image paths for vercel deployment

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </style>
     
     <!-- Preload non-critical CSS -->
-    <link rel="preload" href="/src/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="/src/index.css"></noscript>
+    <link rel="preload" href="./src/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="./src/index.css"></noscript>
     
     <!-- CSS loading optimization script -->
     <script>
