swapped CSS loading so now it's only loaded from the index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <!-- Critical CSS will be inlined by Vite -->
     <style>
+      @import "./src/index.css";
       /* Critical above-the-fold styles */
       #root {
         min-height: 100vh;
