--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Critical CSS will be inlined by Vite -->
     <style>
-      @import "./src/index.css";
+      @import './src/index.css';
       /* Critical above-the-fold styles */
       #root {
         min-height: 100vh;
@@ -32,38 +32,33 @@
         min-height: 100vh;
         font-size: 18px;
         color: #666;
-        background: linear-gradient(to bottom right, hsl(154, 100%, 98%), hsl(192, 85%, 98%));
+        background: linear-gradient(
+          to bottom right,
+          hsl(154, 100%, 98%),
+          hsl(192, 85%, 98%)
+        );
       }
       /* Critical layout styles to prevent CLS */
-      .header-container { 
-        text-align: center; 
-        margin-bottom: 2rem; 
+      .header-container {
+        text-align: center;
+        margin-bottom: 2rem;
       }
-      .main-grid { 
-        display: grid; 
-        gap: 1.5rem; 
-        grid-template-columns: 1fr; 
+      .main-grid {
+        display: grid;
+        gap: 1.5rem;
+        grid-template-columns: 1fr;
       }
       @media (min-width: 768px) {
-        .main-grid { 
-          grid-template-columns: 1fr 1fr; 
+        .main-grid {
+          grid-template-columns: 1fr 1fr;
         }
       }
     </style>
-    
-    <link
-      rel="icon"
-      type="image/png"
-      href="/favicon-96x96.png"
-      sizes="96x96"
-    />
+
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="/favicon.ico" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/apple-touch-icon.png"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Strip AI" />
     <link rel="manifest" href="/site.webmanifest" />
 
@@ -91,7 +86,5 @@
       <div class="loading">Loading Strip AI...</div>
     </div>
     <script type="module" src="/src/main.tsx"></script>
-
-
   </body>
 </html>
