Adds open graph tags to app

--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
       content="Strip AI - Replace em-dash, en-dash, and smart quotes with simple characters"
     />
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://strip-ai.spacenectar.io/" />
+    <meta property="og:title" content="Strip AI - De-AI-fy your text" />
+    <meta property="og:description" content="A simple React application to replace em-dash, en-dash, smart quotes, clean up whitespace, and optionally remove emoji. Perfect for normalizing AI-generated text." />
+    <meta property="og:image" content="https://strip-ai.spacenectar.io/social-banner.jpg" />
+    <meta property="og:image:alt" content="Strip AI - Text normalization tool" />
+    <meta property="og:site_name" content="Strip AI" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://strip-ai.spacenectar.io/" />
+    <meta property="twitter:title" content="Strip AI - De-AI-fy your text" />
+    <meta property="twitter:description" content="A simple React application to replace em-dash, en-dash, smart quotes, clean up whitespace, and optionally remove emoji. Perfect for normalizing AI-generated text." />
+    <meta property="twitter:image" content="https://strip-ai.spacenectar.io/social-banner.jpg" />
+    <meta property="twitter:image:alt" content="Strip AI - Text normalization tool" />
+    <meta name="twitter:creator" content="@foxleigh81" />
+
+    <!-- Additional Meta Tags -->
+    <meta name="author" content="Alexander Foxleigh" />
+    <meta name="keywords" content="text normalization, em-dash, en-dash, smart quotes, AI text, text processing, unicode, characters" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://strip-ai.spacenectar.io/" />
+
     <!-- Preconnect to improve loading performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
 
